<resources>
    <string name="app_name">Golf Score</string>

    <!-- HomeActivity -->
    <string name="home_title">Home</string>
    <string name="home_button_new">New</string>
    <string name="home_button_load">Load</string>

    <!-- ScoreActivity -->
    <string name="hole_text">Hole</string>
    <string name="score_text">score : %s (%s)</string>
    <string name="btn_finish_txt">Finish</string>
    <string name="player_text">Players (%s)</string>

    <!-- GameListActivity -->
    <string name="game_list_title">Game List</string>
    <string name="game_list_empty">No games found</string>

    <!-- GameSetupActivity -->
    <string name="game_setup_title">Game Setup</string>
    <string name="game_setup_add_player_button">+ Add Player</string>
    <string name="game_setup_start_game_button">Start</string>
    <string name="game_setup_add_holes_button">+ Add Holes</string>
    <string name="game_setup_game_name">Game Name</string>
    <string name="game_setup_empty_player_list">No Players</string>
    <string name="game_setup_empty_hole_list">No Holes</string>

    <!-- LoginActivity -->
    <string name="login_title">Login</string>

    <!-- GameReportActivity -->
    <string name="game_report_title">Game Report</string>
    <string name="eventTextView">Rounds</string>
    <string name="round_order">Round %d (%s %s)</string>
    <string name="number_of_shots">Number of Shots: %d</string>
    <string name="hole">%s — order(%d)</string>
    <string name="home_button">Home</string>

    <!-- DialogsBoxAddPlayer -->
    <string name="dialog_add_player_title">Add Player</string>

    <!-- DialogsBoxAddHoles -->
    <string name="dialog_add_holes_title">Add Holes</string>

</resources>