<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".application.home.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_button_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/black"
            android:text="@string/home_button_new" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:background="@drawable/button_outline_bg"
            android:textColor="@color/colorPrimary"
            android:text="@string/home_button_load" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>