<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".application.setup.GameSetupActivity">

    <TextView
        android:id="@+id/game_setup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_setup_title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_setup_game_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/game_setup_game_name_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/game_setup_game_name_edit_text" />

    <EditText
        android:id="@+id/game_setup_game_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/game_setup_title"
        android:autofillHints="nom de la partie, exmple: 'Timote va perdre!' "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/game_setup_player_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/game_setup_game_name_edit_text"/>

    <Button
        android:id="@+id/game_setup_add_player_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/game_setup_add_player_button"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_outline_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_setup_player_recycler_view"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_setup_holes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/game_setup_add_player_button"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/game_setup_add_holes_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/game_setup_add_holes_button"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_outline_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_setup_holes_recycler_view"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:text="@string/game_setup_start_game_button"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>